--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "next": "15.0.2",
     "pg": "^8.13.1",
     "react": "19.0.0-rc-02c0e824-20241028",
